SubBt/force-app/main/default/objects/Questionnaire__c/Questionnaire__c.object-meta.xml
<CustomObject>
    <label>Check List Line</label>
    <nameField>
        <displayFormat>CNRL-{00000}</displayFormat>
        <label>Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Check List Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>