SubBt/force-app/main/default/objects/Questionnaire__c/fields/Checklist_Response__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist Response</label>
    <referenceTo>Checklist_Response__c</referenceTo>
    <relationshipName>Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>