SubBt/force-app/main/default/objects/Questionnaire__c/fields/Question_Name__c.field-meta.xml
<CustomField>
    <fullName>Question_Name__c</fullName>
    <formula>Questions__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Name</label>
    <type>Text</type>
</CustomField>