SubBt/force-app/main/default/objects/Questionnaire__c/fields/QuestionireQuestion__c.field-meta.xml
<CustomField>
    <fullName>QuestionireQuestion__c</fullName>
    <label>Question Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>